--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
     <title>Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
 <header>
@@ -11,7 +12,7 @@
     <nav>
         <ul>
             <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
+            <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
@@ -89,7 +90,7 @@
     <a href="">WebStudio</a>
     <address>
         <ul>
-            <li><a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265912,30.5382531,21z/data=!4m13!1m7!3m6!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!2z0LHRg9C7LiDQm9C10YHQuCDQo9C60YDQsNC40L3QutC4LCAyNiwg0JrQuNC10LIsIDAyMDAw!3b1!8m2!3d50.4265807!4d30.5383858!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г. Киев, пр-т Леси Украинки, 26</a></li>
         <li><a href="info@example.com">info@example.com</a></li>
         <li><a href="+380991111111">+38 099 111 11 11</a></li>
         </ul>
