--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,8 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="mailto:info@devstudio.com"></li>
-            info@devstudio.com</a>
+            <li><a href="mailto:info@devstudio.com">
+            info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
@@ -44,46 +44,39 @@
                             <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/restaurant.jpg" alt="seafood" width="370" height="300">
+                    <img src="./images/restaurant.jpg" alt="seafood" width="370" height="300"/>
                         <h2>Ресторан Seafood</h2>
                             <p>Приложение</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/headphones.jpg" alt="project-prime" width="370" height="300">
+                    <img src="./images/headphones.jpg" alt="project-prime" width="370" height="300"/>
                         <h2>Проект Prime</h2>
                             <p>Маркетинг</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/box.jpg" alt="project-boxes" width="370" height="300">
+                    <img src="./images/box.jpg" alt="project-boxes" width="370" height="300"/>
                         <h2>Проект Boxes</h2>
                             <p>Приложение</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/monitor.jpg" alt="isipiration-has-no-border" width="370" height="300">
+                    <img src="./images/monitor.jpg" alt="isipiration-has-no-border" width="370" height="300"/>
                         <h2>Inspiration has no Borders</h2>
                             <p>Веб-сайт</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/book.jpg" alt="limited-edition" width="370" height="300">
+                    <img src="./images/book.jpg" alt="limited-edition" width="370" height="300"/>
                         <h2>Издание Limited Edition</h2>
                             <p>Дизайн</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/labeltag.jpg" alt="project-lab" width="370" height="300">
+                    <img src="./images/labeltag.jpg" alt="project-lab" width="370" height="300"/>
                         <h2>Проект LAB</h2>
                             <p>Маркетинг</p>
-                    </img>
                 </li>
                 <li>
-                    <img src="./images/growingbusiness.jpg" alt="growing-business" width="370" height="300">
+                    <img src="./images/growingbusiness.jpg" alt="growing-business" width="370" height="300"/>
                         <h2>Growing Business</h2>
                             <p>Приложение</p>
-                    </img>
                 </li>
             </ul>
         </section>
