--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-<header>
-    <a href="">WebStudio</a>
-    <nav>
-        <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+<header class="page-hader">
+    <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+    <nav class="nav">
+        <ul class="site-nav">
+            <li><a class="site-nav-list" href="">Студия</a></li>
+            <li><a class="site-nav-list" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="site-nav-list" href="">Контакты</a></li>
         </ul>
     </nav>
-    <ul>
-    <li><a href="mailto:info@devstudio.com">
+    <ul class="contacts">
+    <li><a class="contacts-list" href="mailto:info@devstudio.com">
     info@devstudio.com</a></li>
-    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li><a class="contacts-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
 <main>
@@ -87,12 +87,13 @@
 </main>
 
 <footer>
-    <a href="">WebStudio</a>
+    <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+
     <address>
         <ul>
             <li><a href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="info@example.com">info@example.com</a></li>
-        <li><a href="+380991111111">+38 099 111 11 11</a></li>
+            <li><a href="info@example.com">info@example.com</a></li>
+            <li><a href="+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
 
