--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+
         <nav>
             <ul>
                 <li><a href="./index.html">Студия</a></li>
@@ -82,7 +83,8 @@
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+
         <address>
             <ul>
                 <li><a
