--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
-<header class="page-hader">
-    <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+<header>
+    <a class="logo link" href=""><span class="icon">Web</span>Studio</a>
     <nav class="nav">
-        <ul class="site-nav">
-            <li><a class="site-nav-list" href="">Студия</a></li>
-            <li><a class="site-nav-list" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="site-nav-list" href="">Контакты</a></li>
+        <ul class="site-nav list">
+            <li><a class="link" href="">Студия</a></li>
+            <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link" href="">Контакты</a></li>
         </ul>
     </nav>
-    <ul class="contacts">
-    <li><a class="contacts-list" href="mailto:info@devstudio.com">
+    <ul class="contacts list">
+    <li><a class="link" href="mailto:info@devstudio.com">
     info@devstudio.com</a></li>
-    <li><a class="contacts-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
     </ul>
 </header>
 <main>
-<section>
-    <h1>Эффективные решения <br />для вашего бизнеса</h1>
+<section class="banner">
+    <h1 class="title">Эффективные решения <br />для вашего бизнеса</h1>
     <button type="button">Заказать услугу</button>
 </section>
 <section>
