--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,8 @@
                 <li><button>Дизайн</button></li>
                 <li><button>Маркетинг</button></li>
             </ul>
+        </section>
+        <section>
             <ul>
                 <li>
                     <img src="./images/notebook.jpg" alt="technokryak" width="370" height="300"/>
