--- a/index.html
+++ b/index.html
@@ -23,77 +23,77 @@
     </ul>
 </header>
 <main>
-<section class="banner">
-    <h1 class="title">Эффективные решения <br />для вашего бизнеса</h1>
-    <button type="button">Заказать услугу</button>
+<section class="hero">
+    <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+    <button class="hero-button" type="button">Заказать услугу</button>
 </section>
 <section>
-    <h2>Особенности</h2>
-    <ul>
-        <li><h3>Внимание к деталям</h3>
+    <h2 hidden>Особенности</h2>
+    <ul class="list">
+        <li><h3 class="section-subtitle">Внимание к деталям</h3>
         <p>
             Идейные соображения, а также <br />начало повседневной работы по <br />формированию позиции.
         </p>
         </li>
         <li>
-            <h3>Пунктуальность</h3>
+            <h3 class="section-subtitle">Пунктуальность</h3>
             <p>
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
         </li>
         <li>
-            <h3>Планирование</h3>
+            <h3 class="section-subtitle">Планирование</h3>
             <p>
                 Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
         </li>
         <li>
-            <h3>Современные технологии</h3>
+            <h3 class="section-subtitle">Современные технологии</h3>
             <p>
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
         </li>
     </ul>
 </section>
-<section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
-        <li><img src="images/comp.jpg" alt="Computer" width="370" height="294" /></li>
-        <li><img src="images/phone.jpg" alt="Phone" width="370" height="294"/></li>
-        <li><img src="images/color.jpg" alt="Color" width="370" height="294" /></li>
+<section class="section">
+    <h2 class="section-title">Чем мы занимаемся</h2>
+    <ul class="list">
+        <li><img src="images/comp.jpg" alt="Computer" width="370" height="295" /></li>
+        <li><img src="images/phone.jpg" alt="Phone" width="370" height="295"/></li>
+        <li><img src="images/color.jpg" alt="Color" width="370" height="295" /></li>
     </ul>
 </section>
-<section>
-    <h2>Наша команда</h2>
-    <ul>
+<section class="section-icon">
+    <h2 class="section-title">Наша команда</h2>
+    <ul class="icon list">
         <li><img src="images/demianenko.jpg" alt="Demianenko" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
+            <h3 class="section-avatar">Игорь Демьяненко</h3>
             <p>Product Designer</p>
         </li>
         <li><img src="images/repina.jpg" alt="Repina" width="270" height="260" />
-            <h3>Ольга Репина</h3>
+            <h3 class="section-avatar">Ольга Репина</h3>
             <p>Frontend Developer</p>
         </li>
         <li><img src="images/tarasov.jpg" alt="Tarasov" width="270" height="260" /> 
-            <h3>Николай Тарасов</h3>
+            <h3 class="section-avatar">Николай Тарасов</h3>
             <p>Marketing</p>
         </li>
         <li><img src="images/ermakov.jpg" alt="Ermakov" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
+            <h3 class="section-avatar">Михаил Ермаков</h3>
             <p>UI Designer</p>
         </li>
     </ul>
 </section>
 </main>
 
-<footer>
-    <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+<footer class="footer">
+    <a class="logo-footer link" href=""><span class="icon">Web</span>Studio</a>
 
     <address>
-        <ul>
-            <li><a href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="info@example.com">info@example.com</a></li>
-            <li><a href="+380991111111">+38 099 111 11 11</a></li>
+        <ul class="list">
+            <li><a class="footer-addres link" href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a class="footer-contacts link" href="info@example.com">info@example.com</a></li>
+            <li><a class="footer-contacts link" href="+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </address>
 
