--- a/portfolio.html
+++ b/portfolio.html
@@ -9,93 +9,93 @@
 </head>
 <body>
     <header>
-        <a class="logo" href=""><span class="icon">Web</span>Studio</a>
+        <a class="logo link" href=""><span class="icon">Web</span>Studio</a>
 
-        <nav>
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+        <nav class="nav">
+            <ul class="site-nav list">
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
+        <ul class="contacts list">
             <li><a href="mailto:info@devstudio.com">
             info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <section>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button>Веб-сайты</button></li>
-                <li><button>Приложения</button></li>
-                <li><button>Дизайн</button></li>
-                <li><button>Маркетинг</button></li>
+        <section class="items">
+            <ul class="list">
+                <li><button class="btn" type="button">Все</button></li>
+                <li><button class="btn" type="button">Веб-сайты</button></li>
+                <li><button class="btn" type="button">Приложения</button></li>
+                <li><button class="btn" type="button">Дизайн</button></li>
+                <li><button class="btn" type="button">Маркетинг</button></li>
             </ul>
         </section>
         <section>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/notebook.jpg" alt="technokryak" width="370" height="300"/>
-                        <h2>Технокряк</h2>
+                        <h3 class="section-items">Технокряк</h3>
                             <p>Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/basketball.jpg" alt="poster-new-orlean-vs-srat" width="370" height="300">
-                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <h3 class="section-items">Постер New Orlean vs Golden Star</h3>
                             <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/restaurant.jpg" alt="seafood" width="370" height="300"/>
-                        <h2>Ресторан Seafood</h2>
+                        <h3 class="section-items">Ресторан Seafood</h3>
                             <p>Приложение</p>
                 </li>
                 <li>
                     <img src="./images/headphones.jpg" alt="project-prime" width="370" height="300"/>
-                        <h2>Проект Prime</h2>
+                        <h3 class="section-items">Проект Prime</h3>
                             <p>Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/box.jpg" alt="project-boxes" width="370" height="300"/>
-                        <h2>Проект Boxes</h2>
+                        <h3 class="section-items">Проект Boxes</h3>
                             <p>Приложение</p>
                 </li>
                 <li>
                     <img src="./images/monitor.jpg" alt="isipiration-has-no-border" width="370" height="300"/>
-                        <h2>Inspiration has no Borders</h2>
+                        <h3 class="section-items">Inspiration has no Borders</h3>
                             <p>Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/book.jpg" alt="limited-edition" width="370" height="300"/>
-                        <h2>Издание Limited Edition</h2>
+                        <h3 class="section-items">Издание Limited Edition</h3>
                             <p>Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/labeltag.jpg" alt="project-lab" width="370" height="300"/>
-                        <h2>Проект LAB</h2>
+                        <h3 class="section-items">Проект LAB</h3>
                             <p>Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/growingbusiness.jpg" alt="growing-business" width="370" height="300"/>
-                        <h2>Growing Business</h2>
+                        <h3 class="section-items">Growing Business</h3>
                             <p>Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a class="logo" href=""><span class="icon">Web</span>Studio</a>
 
-        <address>
-            <ul>
-                <li><a
-                        href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г.
-                        Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="info@example.com">info@example.com</a></li>
-                <li><a href="+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+    <footer class="footer">
+    <a class="logo-footer link" href=""><span class="icon">Web</span>Studio</a>
+    
+    <address>
+        <ul class="list">
+            <li><a class="footer-addres link" href="https://goo.gl/maps/AxwCZDzG8Fguy3GU9">г. Киев, пр-т Леси Украинки,
+                    26</a></li>
+            <li><a class="footer-contacts link" href="info@example.com">info@example.com</a></li>
+            <li><a class="footer-contacts link" href="+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+    </address>
     </footer>
 </body>
 </html>
