--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <nav class="nav">
             <ul class="site-nav list">
                 <li><a class="link" href="./index.html">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link current" href="">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -25,7 +26,8 @@
         </ul>
     </header>
     <main>
-        <section class="items">
+        <h1 hidden>Portfolio</h1>
+        <section class="portfolio">
             <ul class="list">
                 <li><button class="btn" type="button">Все</button></li>
                 <li><button class="btn" type="button">Веб-сайты</button></li>
@@ -33,53 +35,51 @@
                 <li><button class="btn" type="button">Дизайн</button></li>
                 <li><button class="btn" type="button">Маркетинг</button></li>
             </ul>
-        </section>
-        <section>
             <ul class="list">
                 <li>
                     <img src="./images/notebook.jpg" alt="technokryak" width="370" height="300"/>
-                        <h3 class="section-items">Технокряк</h3>
-                            <p>Веб-сайт</p>
+                        <h2 class="portfolio-items">Технокряк</h2>
+                            <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/basketball.jpg" alt="poster-new-orlean-vs-srat" width="370" height="300">
-                        <h3 class="section-items">Постер New Orlean vs Golden Star</h3>
-                            <p>Дизайн</p>
+                        <h2 class="portfolio-items">Постер New Orlean vs Golden Star</h2>
+                            <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/restaurant.jpg" alt="seafood" width="370" height="300"/>
-                        <h3 class="section-items">Ресторан Seafood</h3>
-                            <p>Приложение</p>
+                        <h2 class="portfolio-items">Ресторан Seafood</h2>
+                            <p class="portfolio-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/headphones.jpg" alt="project-prime" width="370" height="300"/>
-                        <h3 class="section-items">Проект Prime</h3>
-                            <p>Маркетинг</p>
+                        <h2 class="portfolio-items">Проект Prime</h2>
+                            <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/box.jpg" alt="project-boxes" width="370" height="300"/>
-                        <h3 class="section-items">Проект Boxes</h3>
-                            <p>Приложение</p>
+                        <h2 class="portfolio-items">Проект Boxes</h2>
+                            <p class="portfolio-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/monitor.jpg" alt="isipiration-has-no-border" width="370" height="300"/>
-                        <h3 class="section-items">Inspiration has no Borders</h3>
-                            <p>Веб-сайт</p>
+                        <h2 class="portfolio-items">Inspiration has no Borders</h2>
+                            <p class="portfolio-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/book.jpg" alt="limited-edition" width="370" height="300"/>
-                        <h3 class="section-items">Издание Limited Edition</h3>
-                            <p>Дизайн</p>
+                        <h2 class="portfolio-items">Издание Limited Edition</h2>
+                            <p class="portfolio-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/labeltag.jpg" alt="project-lab" width="370" height="300"/>
-                        <h3 class="section-items">Проект LAB</h3>
-                            <p>Маркетинг</p>
+                        <h2 class="portfolio-items">Проект LAB</h2>
+                            <p class="portfolio-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/growingbusiness.jpg" alt="growing-business" width="370" height="300"/>
-                        <h3 class="section-items">Growing Business</h3>
-                            <p>Приложение</p>
+                        <h2 class="portfolio-items">Growing Business</h2>
+                            <p class="portfolio-text">Приложение</p>
                 </li>
             </ul>
         </section>
