--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=devise-width, initial-scale=1.0">
     <title>Studio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
@@ -11,7 +12,7 @@
     <a class="logo link" href=""><span class="icon">Web</span>Studio</a>
     <nav class="nav">
         <ul class="site-nav list">
-            <li><a class="link" href="">Студия</a></li>
+            <li><a class="link current" href="./index.html">Студия</a></li>
             <li><a class="link" href="./portfolio.html">Портфолио</a></li>
             <li><a class="link" href="">Контакты</a></li>
         </ul>
@@ -30,26 +31,26 @@
 <section>
     <h2 hidden>Особенности</h2>
     <ul class="list">
-        <li><h3 class="section-subtitle">Внимание к деталям</h3>
-        <p>
-            Идейные соображения, а также <br />начало повседневной работы по <br />формированию позиции.
-        </p>
+        <li><h3 class="feature">Внимание к деталям</h3>
+            <p class="feature-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
         </li>
         <li>
-            <h3 class="section-subtitle">Пунктуальность</h3>
-            <p>
+            <h3 class="feature">Пунктуальность</h3>
+            <p class="feature-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
         </li>
         <li>
-            <h3 class="section-subtitle">Планирование</h3>
-            <p>
+            <h3 class="feature">Планирование</h3>
+            <p class="feature-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
         </li>
         <li>
-            <h3 class="section-subtitle">Современные технологии</h3>
-            <p>
+            <h3 class="feature">Современные технологии</h3>
+            <p class="feature-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
             </p>
         </li>
@@ -63,24 +64,24 @@
         <li><img src="images/color.jpg" alt="Color" width="370" height="295" /></li>
     </ul>
 </section>
-<section class="section-icon">
+<section class="section">
     <h2 class="section-title">Наша команда</h2>
     <ul class="icon list">
         <li><img src="images/demianenko.jpg" alt="Demianenko" width="270" height="260" />
             <h3 class="section-avatar">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <p class="icon-text">Product Designer</p>
         </li>
         <li><img src="images/repina.jpg" alt="Repina" width="270" height="260" />
             <h3 class="section-avatar">Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <p class="icon-text">Frontend Developer</p>
         </li>
         <li><img src="images/tarasov.jpg" alt="Tarasov" width="270" height="260" /> 
             <h3 class="section-avatar">Николай Тарасов</h3>
-            <p>Marketing</p>
+            <p class="icon-text">Marketing</p>
         </li>
         <li><img src="images/ermakov.jpg" alt="Ermakov" width="270" height="260" />
             <h3 class="section-avatar">Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <p class="icon-text">UI Designer</p>
         </li>
     </ul>
 </section>
