--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,14 @@
             </ul>
         </nav>
         <ul class="contacts list">
-            <li><a href="mailto:info@devstudio.com">
+            <li><a class="link" href="mailto:info@devstudio.com">
             info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-        <h1 hidden>Portfolio</h1>
         <section class="portfolio">
+            <h1 hidden>Portfolio</h1>
             <ul class="list">
                 <li><button class="btn" type="button">Все</button></li>
                 <li><button class="btn" type="button">Веб-сайты</button></li>
